# mutra

./: CMakeLists.txt  PKGBUILD  README.html  category
app/: CMakeLists.txt  app.qrc  main.cpp  mutra.desktop  widgets.cpp  widgets.hpp
app/forms/: devices_settings.ui  exercise_settings.ui  main.ui  metronome_settings.ui  midi_mixer.ui  notes_exercise_settings.ui  settings_dialog.ui
cli/: CMakeLists.txt  midi_file_printer.cpp  midi_input_test.cpp  player.cpp  star_lighter.cpp  star_lighter.hpp  trainer_light.cpp
debian/: README  README.Debian  README.source  changelog  control  copyright  libmutra-dev.install  libmutra.dirs  libmutra.install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu  menu.ex  music-trainer.cron.d.ex  music-trainer.doc-base.EX  mutra.dirs  mutra.install  postinst  postinst.ex  postrm.ex  preinst.ex  prerm.ex  shlibs.local.ex
doc/: thoughts.html
lib/: CMakeLists.txt
lib/midi/: CMakeLists.txt  MIDIFileReader.hpp  Makefile  midi_core.cpp  midi_core.hpp  midi_events.cpp  midi_events.hpp  midi_files.cpp  midi_files.hpp  midi_utility.cpp  midi_utility.hpp  rtmidi_backend.cpp  rtmidi_backend.hpp
lib/midi/backends/: alsa_backend.cpp  alsa_backend.hpp  linux_backend.cpp  linux_backend.hpp  rtmidi_backend.hpp
lib/midi/linux/: Sequencer.cpp  Sequencer.hpp  input_device.cpp  input_device.hpp  player.cpp
lib/music/: CMakeLists.txt  music.cpp  music.hpp
lib/training/: CMakeLists.txt  Lesson.cpp  Lesson.hpp  exercise_sequence.cpp  exercise_sequence.hpp  metronome.cpp  metronome.hpp  mutra-training-mime.xml
linux/: Sequencer.cpp  Sequencer.hpp  input_device.hpp
