# Move backends rules to the backends subdirectory
set( BACKENDS "backends/linux_backend.cpp" )
find_package( ALSA )
if( ALSA_FOUND )
  message( "USE_ALSA_BACKEND" )
  add_compile_definitions( USE_ALSA_BACKEND )
  set( EXTRA_LIBRARIES "${EXTRA_LIBRARIES}" "asound" )
  set( BACKENDS ${BACKENDS} "backends/alsa_backend.cpp" )
endif()
find_library( rtmidi_FOUND rtmidi )
if( rtmidi_FOUND )
  add_compile_definitions( USE_RTMIDI_BACKEND )
  set( BACKENDS "${BACKENDS}" "backends/rtmidi_backend.cpp" )
  message( "Use RTMIDI backend: ${rtmidi_FOUND} ${BACKENDS}" )
  set( EXTRA_LIBRARIES "${EXTRA_LIBRARIES}" "rtmidi" )
endif()

add_library( music_trainer_midi SHARED midi_core.cpp midi_events.cpp midi_files.cpp midi_utility.cpp ${BACKENDS} )

target_link_libraries( music_trainer_midi ${EXTRA_LIBRARIES} )
